Time: 51 ms (42.27%) | Memory: 58.9 MB (92.78%) - LeetSync